RESOLVED FIXED256353
LocalFrameView::performPostLayoutTasks should not synchronously scroll to or focus an element (2)
https://bugs.webkit.org/show_bug.cgi?id=256353
Summary LocalFrameView::performPostLayoutTasks should not synchronously scroll to or ...
Ryosuke Niwa
Reported 2023-05-04 23:05:32 PDT
Somehow https://commits.webkit.org/263699@main didn't contain the most crucial code change to make performPostLayoutTasks not trigger synchronous scroll or focus.
Attachments
Ryosuke Niwa
Comment 1 2023-05-04 23:09:56 PDT
EWS
Comment 2 2023-05-05 10:59:57 PDT
Committed 263724@main (be4701c3c0d1): <https://commits.webkit.org/263724@main> Reviewed commits have been landed. Closing PR #13485 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-05-05 11:00:21 PDT
Simon Fraser (smfr)
Comment 4 2023-06-05 14:30:28 PDT
This caused bug 257576.
Note You need to log in before you can comment on or make changes to this bug.