LocalFrameView::performPostLayoutTasks should not synchronously scroll to or focus an element (2) https://bugs.webkit.org/show_bug.cgi?id=256353

Reviewed by Simon Fraser.

Somehow 263699@main didn't contain the most crucial code change to make performPostLayoutTasks not
trigger synchronous scroll or focus so do that for real this time.

This PR also fixes tests that had assumed synchronous scroll anchoring.

* LayoutTests/fast/dynamic/anchor-lock.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-scroll-anchoring/fragment-scrolling-anchors.html:

* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::completed): Don't clear the scroll anchoring at the end for no reason.

* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::performPostLayoutTasks):

Canonical link: https://commits.webkit.org/263724@main